fixed edit form button spacing

--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -168,7 +168,7 @@ div > .purple-border-button {
 }
 
 .buttons-center-container{
-    margin-top: 60px;
+    width: 100%;
     display: flex;
     justify-content: flex-end;
 }
